--- a/JazzHandsCSharp/Screenmedia.IFTTT.JazzHands/Screenmedia.IFTTT.JazzHands.csproj
+++ b/JazzHandsCSharp/Screenmedia.IFTTT.JazzHands/Screenmedia.IFTTT.JazzHands.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -54,5 +54,5 @@
     <Compile Include="Transform3DAnimation.cs" />
     <Compile Include="Transform3D.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
 </Project>
